tests/errors/string_58/SETCHAR3.src
.IPPcode21

DEFVAR GF@str
MOVE GF@str string@A
SETCHAR GF@str int@-8 string@
